// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`проверка редактирования клиента 1`] = `
<div
  className="MobileCompany"
>
  <div
    className="MobileCompanyFilterButtons"
  >
    <input
      className="MobileCompanyButton"
      id="allClientsBtn"
      onClick={[Function]}
      type="button"
      value="Все"
    />
    <input
      className="MobileCompanyButton"
      id="activeFilterBtn"
      onClick={[Function]}
      type="button"
      value="Активные"
    />
    <input
      className="MobileCompanyButton"
      id="blockedFilterBtn"
      onClick={[Function]}
      type="button"
      value="Заблокированные"
    />
  </div>
  <table
    className="MobileCompanyClients"
  >
    <thead>
      <tr>
        <th
          className="TableHeader"
        >
          Фамилия
        </th>
        <th
          className="TableHeader"
        >
          Имя
        </th>
        <th
          className="TableHeader"
        >
          Отчество
        </th>
        <th
          className="TableHeader"
        >
          Баланс
        </th>
        <th
          className="TableHeader"
        >
          Статус
        </th>
        <th
          className="TableHeader"
        >
          Редактировать
        </th>
        <th
          className="TableHeader"
        >
          Удалить
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          className="ClientAttribute"
        >
          Иванов
        </td>
        <td
          className="ClientAttribute"
        >
          Иван
        </td>
        <td
          className="ClientAttribute"
        >
          Иванович
        </td>
        <td
          className="ClientAttribute"
        >
          100
        </td>
        <td
          className="ClientAttribute ActiveStatus"
        >
          active
        </td>
        <td
          className="ClientAttribute"
        >
          <input
            className="Input"
            id="editBtn"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td
          className="ClientAttribute"
        >
          <input
            className="Input"
            id="deleteBtn"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
      <tr>
        <td
          className="ClientAttribute"
        >
          Петров
        </td>
        <td
          className="ClientAttribute"
        >
          Пётр
        </td>
        <td
          className="ClientAttribute"
        >
          Петрович
        </td>
        <td
          className="ClientAttribute"
        >
          200
        </td>
        <td
          className="ClientAttribute ActiveStatus"
        >
          active
        </td>
        <td
          className="ClientAttribute"
        >
          <input
            className="Input"
            id="editBtn"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td
          className="ClientAttribute"
        >
          <input
            className="Input"
            id="deleteBtn"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
      <tr>
        <td
          className="ClientAttribute"
        >
          Сидоров
        </td>
        <td
          className="ClientAttribute"
        >
          Сидр
        </td>
        <td
          className="ClientAttribute"
        >
          Сидорович
        </td>
        <td
          className="ClientAttribute"
        >
          300
        </td>
        <td
          className="ClientAttribute ActiveStatus"
        >
          active
        </td>
        <td
          className="ClientAttribute"
        >
          <input
            className="Input"
            id="editBtn"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td
          className="ClientAttribute"
        >
          <input
            className="Input"
            id="deleteBtn"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
      <tr>
        <td
          className="ClientAttribute"
        >
          Григорьев
        </td>
        <td
          className="ClientAttribute"
        >
          Григорий
        </td>
        <td
          className="ClientAttribute"
        >
          Григорьевич
        </td>
        <td
          className="ClientAttribute"
        >
          -50
        </td>
        <td
          className="ClientAttribute BlockedStatus"
        >
          blocked
        </td>
        <td
          className="ClientAttribute"
        >
          <input
            className="Input"
            id="editBtn"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td
          className="ClientAttribute"
        >
          <input
            className="Input"
            id="deleteBtn"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
    </tbody>
  </table>
  <input
    className="MobileCompanyButton"
    id="addBtn"
    onClick={[Function]}
    type="button"
    value="Добавить клиента"
  />
</div>
`;

exports[`проверка редактирования клиента 2`] = `
<div
  className="MobileCompany"
>
  <div
    className="MobileCompanyFilterButtons"
  >
    <input
      className="MobileCompanyButton"
      id="allClientsBtn"
      onClick={[Function]}
      type="button"
      value="Все"
    />
    <input
      className="MobileCompanyButton"
      id="activeFilterBtn"
      onClick={[Function]}
      type="button"
      value="Активные"
    />
    <input
      className="MobileCompanyButton"
      id="blockedFilterBtn"
      onClick={[Function]}
      type="button"
      value="Заблокированные"
    />
  </div>
  <table
    className="MobileCompanyClients"
  >
    <thead>
      <tr>
        <th
          className="TableHeader"
        >
          Фамилия
        </th>
        <th
          className="TableHeader"
        >
          Имя
        </th>
        <th
          className="TableHeader"
        >
          Отчество
        </th>
        <th
          className="TableHeader"
        >
          Баланс
        </th>
        <th
          className="TableHeader"
        >
          Статус
        </th>
        <th
          className="TableHeader"
        >
          Редактировать
        </th>
        <th
          className="TableHeader"
        >
          Удалить
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          className="ClientAttribute"
        >
          Иванов
        </td>
        <td
          className="ClientAttribute"
        >
          Иван
        </td>
        <td
          className="ClientAttribute"
        >
          Иванович
        </td>
        <td
          className="ClientAttribute"
        >
          100
        </td>
        <td
          className="ClientAttribute ActiveStatus"
        >
          active
        </td>
        <td
          className="ClientAttribute"
        >
          <input
            className="Input"
            id="editBtn"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td
          className="ClientAttribute"
        >
          <input
            className="Input"
            id="deleteBtn"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
      <tr>
        <td
          className="ClientAttribute"
        >
          Петров
        </td>
        <td
          className="ClientAttribute"
        >
          Пётр
        </td>
        <td
          className="ClientAttribute"
        >
          Петрович
        </td>
        <td
          className="ClientAttribute"
        >
          200
        </td>
        <td
          className="ClientAttribute ActiveStatus"
        >
          active
        </td>
        <td
          className="ClientAttribute"
        >
          <input
            className="Input"
            id="editBtn"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td
          className="ClientAttribute"
        >
          <input
            className="Input"
            id="deleteBtn"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
      <tr>
        <td
          className="ClientAttribute"
        >
          Сидоров
        </td>
        <td
          className="ClientAttribute"
        >
          Сидр
        </td>
        <td
          className="ClientAttribute"
        >
          Сидорович
        </td>
        <td
          className="ClientAttribute"
        >
          300
        </td>
        <td
          className="ClientAttribute ActiveStatus"
        >
          active
        </td>
        <td
          className="ClientAttribute"
        >
          <input
            className="Input"
            id="editBtn"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td
          className="ClientAttribute"
        >
          <input
            className="Input"
            id="deleteBtn"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
      <tr>
        <td
          className="ClientAttribute"
        >
          Григорьев
        </td>
        <td
          className="ClientAttribute"
        >
          Григорий
        </td>
        <td
          className="ClientAttribute"
        >
          Григорьевич
        </td>
        <td
          className="ClientAttribute"
        >
          -50
        </td>
        <td
          className="ClientAttribute BlockedStatus"
        >
          blocked
        </td>
        <td
          className="ClientAttribute"
        >
          <input
            className="Input"
            id="editBtn"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td
          className="ClientAttribute"
        >
          <input
            className="Input"
            id="deleteBtn"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
    </tbody>
  </table>
  <input
    className="MobileCompanyButton"
    id="addBtn"
    onClick={[Function]}
    type="button"
    value="Добавить клиента"
  />
  <div
    className="ClientBlock"
  >
    <h1>
      Edit 
    </h1>
    <div
      className="InputBlock"
    >
      <label
        className="BlockLabels"
      >
        First name:
        <input
          className="BlockInput"
          defaultValue="Иванов"
          id="firstName"
          type="text"
        />
      </label>
      <br />
      <label
        className="BlockLabels"
      >
        Second name:
        <input
          className="BlockInput"
          defaultValue="Иван"
          id="secondName"
          type="text"
        />
      </label>
      <br />
      <label
        className="BlockLabels"
      >
        Last name:
        <input
          className="BlockInput"
          defaultValue="Иванович"
          id="lastName"
          type="text"
        />
      </label>
      <br />
      <label
        className="BlockLabels"
      >
        Balance:
        <input
          className="BlockInput"
          defaultValue={100}
          id="balance"
          type="number"
        />
      </label>
      <br />
    </div>
    <div
      className="ButtonBlock"
    >
      <input
        className="Button"
        id="saveBtn"
        onClick={[Function]}
        type="button"
        value="Save"
      />
      <input
        className="Button"
        onClick={[Function]}
        type="button"
        value="Cancel"
      />
    </div>
  </div>
</div>
`;
